# eliot-emscripten

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  THANKS  bootstrap  configure.ac
.github/workflows/: deploy.yml
dic/: Makefile.am  compdic.cpp  compdicmain.cpp  debug.h  dic_search.cpp  encoding.cpp  header.cpp  header.h  listdicmain.cpp  logging.h  regexpmain.cpp
dictionaries/: en.dawg  gd.dawg  gd_wordlist.txt
docs/: CNAME  Makefile.am  board.css  board.js  cookies.html  eliotweb.cpp  eliotweb.js  eliotweb.wasm.map  game_io.cpp  game_io.h  index.html  privacy.html
docs/cookie-banner/: silktide-consent-manager.css  silktide-consent-manager.js
game/: Makefile.am  ai_percent.cpp  ai_percent.h  arbitration.h  bag.cpp  bag.h  duplicate.cpp  duplicate.h  freegame.cpp  freegame.h  game.cpp  game.h  game_factory.cpp  game_factory.h  json_reader.cpp  json_reader.h  json_writer.cpp  json_writer.h  pldrack.cpp  public_game.cpp  public_game.h  rack.cpp  results.cpp  results.h  topping.cpp  topping.h  training.h  turn.h
game/cmd/: game_move_cmd.cpp
utils/: Makefile.am  eliottxt.cpp  runner  twl06.dawg
website/: Makefile.am  ads.txt  board.css  board.html  board.js  eliotweb.cpp  en.html  game_io.cpp  game_io.h  gd.html  index.html  index_en.html  index_gd.html  service.js  site.webmanifest  sw.js
website/cookie-banner/: silktide-consent-manager.css  silktide-consent-manager.js
website/sounds/: LICENSE.md
